--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,18 @@
 language: elixir
 elixir:
-  - 1.3.4
-  - 1.4
-  - 1.5
-  - 1.6
+  - 1.7
 otp_release:
-  - 18.3
-  - 19.3
   - 20.2
+  - 21.0
 env:
   - STRICT=true
   - STRICT=false
 matrix:
   exclude:
-    - elixir: 1.6
+    - otp_release: 20.2
+      env: STRICT=true
+    - otp_release: 21.0
       env: STRICT=false
-    - elixir: 1.3.4
-      env: STRICT=true
-    - elixir: 1.4
-      env: STRICT=true
-    - elixir: 1.5
-      env: STRICT=true
-    - elixir: 1.6
-      otp_release: 18.3
-    - elixir: 1.3.4
-      otp_release: 20.2
 notifications:
   email:
     - mitch@rokkincat.com
