--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ script:
   - if [ "$STRICT" = "true" ]; then mix compile --warnings-as-errors; fi
   - mix test
   - mix credo
-  - if [ "$STRICT" = "true" ]; then mix dialyzer; fi
+  - if [ "$STRICT" = "true" ]; then travis_wait mix dialyzer; fi
   - if [ "$STRICT" = "true" ]; then mix format --dry-run --check-formatted; fi
 cache:
   directories:
